# git-status-vars

./: .gitignore  .pre-commit-config.yaml  .typos.toml  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  LICENSE-MIT  README.md  RELEASE.md  Vagrantfile
.github/workflows/: dependabot-prek.yaml  pr-checks.yaml  release.yaml
src/: lib.rs  main.rs  params.rs  shell_writer.rs  unix.rs  windows.rs  write_env.rs
tests/: meta.rs  repos.rs
tests/helpers/: mod.rs
