[package]
name = "git-status-vars"
version = "0.1.1"
authors = ["Daniel Parks <oss-git-status-vars@demonhorse.org>"]
description = "Summarize git repo info into shell variables (for use in a prompt)"
homepage = "https://github.com/danielparks/git-status-vars"
repository = "https://github.com/danielparks/git-status-vars"
readme = "README.md"
keywords = ["git", "shell", "prompt", "zsh", "bash"]
categories = ["development-tools", "command-line-utilities"]
license = "MIT OR Apache-2.0"
edition = "2018"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
clap = { version = "3.2.15", features = ["derive"] }
git2 = { version = "0.15.0", default-features = false }
shell-words = "1.1.0"

[dev-dependencies]
tempfile = "3.3.0"
