[package]
name = "git-status-vars"
version = "0.1.3"
authors = ["Daniel Parks <oss-git-status-vars@demonhorse.org>"]
description = "Summarize git repo info into shell variables (for use in a prompt)"
homepage = "https://github.com/danielparks/git-status-vars"
repository = "https://github.com/danielparks/git-status-vars"
documentation = "https://github.com/danielparks/git-status-vars"
readme = "README.md"
keywords = ["git", "shell", "prompt", "zsh", "bash"]
categories = ["development-tools", "command-line-utilities"]
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
clap = { version = "4.0.16", features = ["derive"] }
git2 = { version = "0.15.0", default-features = false }
shell-words = "1.1.0"

[dev-dependencies]
assert_cmd = "2.0.7"
bstr = { version = "1.1.0", default-features = false, features = ["std"] }
duct = "0.13.6"
pretty_assertions = "1.3.0"
regex = "1.7.0"
target-test-dir = "0.2.0"
