[package]
name = "git-status-vars"
version = "1.3.0"
authors = ["Daniel Parks <oss-git-status-vars@demonhorse.org>"]
description = "Summarize git repo info into shell variables (for use in a prompt)"
homepage = "https://github.com/danielparks/git-status-vars"
repository = "https://github.com/danielparks/git-status-vars"
documentation = "https://github.com/danielparks/git-status-vars"
readme = "README.md"
keywords = ["git", "shell", "prompt", "zsh", "bash"]
categories = ["development-tools", "command-line-utilities"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.74.1"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
duration-str = { version = "0.17.0", default-features = false, features = ["lowercase", "no_calc"] }
git2 = { version = "0.20.4", default-features = false }
libc = "0.2.174"
nix = { version = "0.30.1", features = ["signal", "process"] }
shell-words = "1.1.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

[dev-dependencies]
assert_cmd = "2.0.7"
bstr = { version = "1.1.0", default-features = false, features = ["std"] }
duct = "0.13.6"
pretty_assertions = "1.3.0"
regex = "1.7.0"
target-test-dir = "0.3.0"

[profile.release]
codegen-units = 1
lto = true

[lints]
workspace = true

[workspace.lints.rust]
unsafe_code = "allow"
missing_docs = "warn"

[workspace.lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_docs_in_private_items = "warn"

# Other restriction lints
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
arithmetic_side_effects = "warn"
as_underscore = "warn"
assertions_on_result_states = "warn"
dbg_macro = "warn"
default_union_representation = "warn"
empty_structs_with_brackets = "warn"
filetype_is_file = "warn" # maybe?
fn_to_numeric_cast_any = "warn"
format_push_string = "warn" # maybe? alternative is fallible.
get_unwrap = "warn"
impl_trait_in_params = "warn"
integer_division = "warn"
lossy_float_literal = "warn"
mem_forget = "warn"
mixed_read_write_in_expression = "warn"
multiple_inherent_impl = "warn"
multiple_unsafe_ops_per_block = "warn"
mutex_atomic = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
same_name_method = "warn"
semicolon_inside_block = "warn"
str_to_string = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_doc = "warn"
unnecessary_self_imports = "warn"
unneeded_field_pattern = "warn"
verbose_file_reads = "warn"

# Pedantic exceptions
let_underscore_untyped = "allow"
manual_string_new = "allow"
map_unwrap_or = "allow"
module_name_repetitions = "allow"
unnecessary_debug_formatting = "allow" # display() doesn’t escape invalid chars

# Nursery exceptions
option_if_let_else = "allow"
